Fix some of the most important layout breaks with very large font sizes in mobile

--- a/src/app/components/auction-ruleset-link/auction-ruleset-link.component.scss
+++ b/src/app/components/auction-ruleset-link/auction-ruleset-link.component.scss
@@ -5,6 +5,8 @@
     font-size: var(--font-size-large);
     color: var(--accent-color-2);
     font-weight: var(--font-weight-bolder);
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .auction-type-link {
