--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,6 +65,8 @@
     --font: var(--font-family);
     --monospace-font: monospace;
 
+    --mobile-icon-size: clamp(16px, 2rem, 24px);
+
     --active-icon-shadow: 0px 0.3px 0px var(--basic-affordances-color),
         0px -0.3px 0px var(--basic-affordances-color),
         -0.3px -0.3px 0px var(--basic-affordances-color),
@@ -144,6 +146,12 @@ body {
 
     > :not(.divider) {
         @include box.padding-horizontal(2rem);
+    }
+}
+
+@include viewports.mobile {
+    .medium-icon {
+        font-size: var(--mobile-icon-size);
     }
 }
 
